# biebie-cli

./: .gitignore  Cargo.toml  README.md
src/: main.rs  scanner.rs  uploader.rs
src/hash/: mod.rs  sample_hash.rs
