[package]
name = "biebie-cli"
version = "0.0.1"
edition = "2021"

[dependencies]
walkdir = "2.4"
mime_guess = "2.0"
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
blake3 = "1.5"
kamadak-exif = "0.6"
clap = { version = "4.5", features = ["derive"] }
indicatif = "0.17"
dashmap = "5"
num_cpus = "1.0"
rayon = "1.8"
memmap2 = "0.9"
libc = "0.2.174"
chrono = { version = "0.4", features = ["serde"] }

